added router, open each story in new url

--- a/src/components/story/story.css
+++ b/src/components/story/story.css
@@ -14,6 +14,13 @@
     background: #0277BD;
 }
 
+.story-wrapper a {
+    display: flex;
+    text-decoration: none;
+    color: #fff;
+    width:100%;
+}
+
 .points {
     display: flex;
     justify-content: center;
